--- a/config/crd/bases/core.vectorized.io_redpandaclusters.yaml
+++ b/config/crd/bases/core.vectorized.io_redpandaclusters.yaml
@@ -36,13 +36,75 @@ spec:
           spec:
             description: RedpandaClusterSpec defines the desired state of RedpandaCluster
             properties:
-              foo:
-                description: Foo is an example field of RedpandaCluster. Edit RedpandaCluster_types.go
-                  to remove/update
+              configuration:
+                description: Configuration represent redpanda specific configuration
+                properties:
+                  admin:
+                    description: SocketAddress provide the way to configure the port
+                    properties:
+                      port:
+                        type: integer
+                    type: object
+                  advertisedKafkaApi:
+                    description: SocketAddress provide the way to configure the port
+                    properties:
+                      port:
+                        type: integer
+                    type: object
+                  advertisedRpcApi:
+                    description: SocketAddress provide the way to configure the port
+                    properties:
+                      port:
+                        type: integer
+                    type: object
+                  developerMode:
+                    type: boolean
+                  kafkaApi:
+                    description: SocketAddress provide the way to configure the port
+                    properties:
+                      port:
+                        type: integer
+                    type: object
+                  kafkaApiTLS:
+                    description: ServerTLS allows the redpanda to configure TLS connection
+                    properties:
+                      certFile:
+                        type: string
+                      enabled:
+                        type: boolean
+                      keyFile:
+                        type: string
+                      truststoreFile:
+                        type: string
+                    type: object
+                  rpcServer:
+                    description: SocketAddress provide the way to configure the port
+                    properties:
+                      port:
+                        type: integer
+                    type: object
+                type: object
+              replicas:
+                description: Replicas determine how big the cluster will be.
+                format: int32
+                minimum: 0
+                type: integer
+              version:
+                description: Version of Redpanda to use from upstream.
                 type: string
             type: object
           status:
             description: RedpandaClusterStatus defines the observed state of RedpandaCluster
+            properties:
+              nodes:
+                description: Nodes of the provision redpanda nodes
+                items:
+                  type: string
+                type: array
+              replicas:
+                description: Replicas show how many nodes are working in the cluster
+                format: int32
+                type: integer
             type: object
         type: object
     served: true
