--- a/config/samples/core_v1alpha1_redpandacluster.yaml
+++ b/config/samples/core_v1alpha1_redpandacluster.yaml
@@ -2,6 +2,17 @@ apiVersion: core.vectorized.io/v1alpha1
 kind: RedpandaCluster
 metadata:
   name: redpandacluster-sample
+  labels:
+    app.kubernetes.io/name: "redpanda"
+    app.kubernetes.io/instance: "redpandacluster-sample"
 spec:
-  # Add fields here
-  foo: bar
+  version: "latest"
+  replicas: 1
+  configuration:
+    rpcServer:
+      port: 33145
+    kafkaApi:
+      port: 9092
+    admin:
+      port: 9644
+    developerMode: true
