--- a/src/go/k8s/config/default/manager_auth_proxy_patch.yaml
+++ b/src/go/k8s/config/default/manager_auth_proxy_patch.yaml
@@ -20,7 +20,7 @@ spec:
         - containerPort: 8443
           name: https
       - name: manager
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         args:
         - "--health-probe-bind-address=:8081"
         - "--metrics-bind-address=127.0.0.1:8080"
