--- a/.github/workflows/k8s-build-and-test.yml
+++ b/.github/workflows/k8s-build-and-test.yml
@@ -48,3 +48,42 @@ jobs:
       with:
         name: kuttl test artifacts
         path: src/go/k8s/tests/_e2e_artifacts
+
+  helm-test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.13.6
+      id: go
+
+    - name: Set up Helm
+      uses: azure/setup-helm@v1
+      with:
+        version: v3.5.2
+
+    - name: Set up chart-testing
+      uses: helm/chart-testing-action@v2.0.1
+      with:
+        version: v3.3.1
+
+    - name: Run chart-testing (lint)
+      working-directory: src/go/k8s/helm-chart/charts
+      run: ct lint --debug --config ci/ct.yaml
+
+    - name: Build containers
+      working-directory: src/go/k8s/
+      run: make helm-e2e-tests
+      shell: bash
+
+    - name: Archive test data
+      if: ${{ failure() }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: kuttl helm test artifacts
+        path: src/go/k8s/tests/_helm_e2e_artifacts
