operator/test: Increase the inotify resource
The problem with luck of inotify resource can ocure when kind cluster
has too many worker nodes.

Ref:
https://kind.sigs.k8s.io/docs/user/known-issues/#pod-errors-due-to-too-many-open-files

--- a/.github/workflows/k8s-build-and-test.yml
+++ b/.github/workflows/k8s-build-and-test.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Increase limits of inotify resources
+      run: |
+        sudo sysctl fs.inotify.max_user_watches=524288
+        sudo sysctl fs.inotify.max_user_instances=512
+        echo 1024000 > /proc/fs/aio-max-nr
+      shell: bash
 
     - name: Check out code
       uses: actions/checkout@v2
@@ -53,6 +59,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Increase limits of inotify resources
+      run: |
+        sudo sysctl fs.inotify.max_user_watches=524288
+        sudo sysctl fs.inotify.max_user_instances=512
+        echo 1024000 > /proc/fs/aio-max-nr
+      shell: bash
 
     - name: Check out code
       uses: actions/checkout@v2
