--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -15,13 +15,30 @@ on:
 jobs:
   release:
     runs-on: ubuntu-20.04
+    container: quay.io/helmpack/chart-releaser:v1.2.0
     steps:
 
     - uses: actions/checkout@v2
-    - name: Publish Helm charts
-      uses: stefanprodan/helm-gh-pages@v1.4.1
+
+    - name: Set up Helm
+      uses: azure/setup-helm@v1
       with:
-        charts_dir: src/go/k8s/helm-chart/charts
-        charts_url: https://charts.vectorized.io/
-        token: ${{ secrets.GITHUB_TOKEN }}
-        chart_version: ${{ github.event.release.tag_name }}
+        version: v3.4.1
+
+    - name: Package helm chart
+      working-directory: src/go/k8s/helm-chart/charts
+      run: helm package --version ${{ github.event.release.tag_name }} --app-version ${{ github.event.release.tag_name }} redpanda-operator
+
+    - name: Upload helm package to release
+      uses: svenstaro/upload-release-action@2.2.1
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: src/go/k8s/helm-chart/charts/redpanda-operator-${{ github.event.release.tag_name }}
+        asset_name: redpanda-operator-${{ github.event.release.tag_name }}
+        tag: ${{ github.event.release.tag_name }}
+
+    - name: Update index
+      run: cr index -c https://charts.vectorized.io/ -i index.yaml -p src/go/k8s/helm-chart/charts -t ${{ secrets.GITHUB_TOKEN }} --push --release-name-template "{{ .Version }}"
+#      run: helm repo index ${TARGET_DIR} --url ${CHARTS_URL} --merge "${TARGET_DIR}/index.yaml"
+      env:
+        CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
