Verify slimmer container image

--- a/src/go/k8s/tests/e2e/node-select-tolerations/02-assert.yaml
+++ b/src/go/k8s/tests/e2e/node-select-tolerations/02-assert.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   containers:
     - name: redpanda
-      image: "vectorized/redpanda:latest"
+      image: "ivotron/redpanda:slimmer"
   nodeName: kind-worker
   nodeSelector:
     redpanda-node: "true"
