--- a/src/go/k8s/tests/e2e/update-conf-image/01-assert.yaml
+++ b/src/go/k8s/tests/e2e/update-conf-image/01-assert.yaml
@@ -8,6 +8,6 @@ spec:
       initContainers:
         - image: "vectorized/configurator:v21.4.11"
       containers:
-        - image: "vectorized/redpanda:latest"
+      - image: "ivotron/redpanda:slimmer"
 status:
   readyReplicas: 2
