--- a/.github/workflows/k8s-build-and-test.yml
+++ b/.github/workflows/k8s-build-and-test.yml
@@ -10,11 +10,10 @@
 name: K8S build and test
 on:
   push:
+    tags:
+      - 'v2**'
     branches:
-      - dev
-  pull_request:
-    branches:
-      - dev
+      - '*'
 jobs:
   test:
     runs-on: ubuntu-latest
