--- a/src/go/k8s/tests/e2e/additional-configuration/00-redpanda-cluster.yaml
+++ b/src/go/k8s/tests/e2e/additional-configuration/00-redpanda-cluster.yaml
@@ -4,8 +4,8 @@ metadata:
   name: additional-configuration
   namespace: default
 spec:
-  image: "vectorized/redpanda"
-  version: "dev"
+  image: "ivotron/redpanda"
+  version: "slimmer"
   replicas: 1
   resources:
     requests:
