--- a/src/go/k8s/tests/e2e/admin-api-tls-client-auth/00-redpanda-cluster.yaml
+++ b/src/go/k8s/tests/e2e/admin-api-tls-client-auth/00-redpanda-cluster.yaml
@@ -3,8 +3,8 @@ kind: Cluster
 metadata:
   name: cluster-tls
 spec:
-  image: "vectorized/redpanda"
-  version: "latest"
+  image: "ivotron/redpanda"
+  version: "slimmer"
   replicas: 1
   resources:
     requests:
