--- a/src/go/k8s/tests/e2e/create-topic-given-cm-secret-client-auth/01-redpanda-cluster.yaml
+++ b/src/go/k8s/tests/e2e/create-topic-given-cm-secret-client-auth/01-redpanda-cluster.yaml
@@ -4,8 +4,8 @@ metadata:
   name: cluster-tls-secret
   namespace: given-cert-secret
 spec:
-  image: "vectorized/redpanda"
-  version: "latest"
+  image: "ivotron/redpanda"
+  version: "slimmer"
   replicas: 1
   resources:
     requests:
