--- a/src/go/k8s/tests/e2e/create-topic-given-issuer-with-client-auth/01-redpanda-cluster.yaml
+++ b/src/go/k8s/tests/e2e/create-topic-given-issuer-with-client-auth/01-redpanda-cluster.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: "redpanda"
     app.kubernetes.io/instance: "cluster-tls"
 spec:
-  image: "vectorized/redpanda"
-  version: "latest"
+  image: "ivotron/redpanda"
+  version: "slimmer"
   replicas: 1
   resources:
     requests:
