--- a/src/go/k8s/tests/e2e/external-connectivity/00-external-connectivity.yaml
+++ b/src/go/k8s/tests/e2e/external-connectivity/00-external-connectivity.yaml
@@ -3,8 +3,8 @@ kind: Cluster
 metadata:
   name: external-connectivity
 spec:
-  image: "vectorized/redpanda"
-  version: "latest"
+  image: "ivotron/redpanda"
+  version: "slimmer"
   replicas: 1
   resources:
     requests:
