--- a/src/go/k8s/tests/e2e/pandaproxy-produce-consume-sasl/01-create-topic.yaml
+++ b/src/go/k8s/tests/e2e/pandaproxy-produce-consume-sasl/01-create-topic.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
         - name: rpk
-          image: vectorized/redpanda:dev
+          image: ivotron/redpanda:slimmer
           env:
             - name: POD_NAMESPACE
               valueFrom:
