--- a/src/go/k8s/tests/e2e/pandaproxy-produce-consume-tls-client/04-consume-message.yaml
+++ b/src/go/k8s/tests/e2e/pandaproxy-produce-consume-tls-client/04-consume-message.yaml
@@ -12,7 +12,7 @@ spec:
             secretName: cluster-proxy-proxy-api-node
       containers:
         - name: rpk
-          image: vectorized/redpanda:dev
+          image: ivotron/redpanda:slimmer
           env:
             - name: POD_NAMESPACE
               valueFrom:
@@ -23,7 +23,7 @@ spec:
             - -c
             - -ex
           args:
-            - | 
+            - |
               curl -s -v https://cluster-proxy-0.cluster-proxy.$POD_NAMESPACE.svc.cluster.local:8082/topics/test/partitions/0/records?offset=0\&timeout=1000\&max_bytes=100000 \
               -H "Accept: application/vnd.kafka.json.v2+json" \
               --cacert /etc/tls/certs/pandaproxy/ca.crt \
