--- a/src/go/k8s/tests/e2e/pandaproxy-produce-consume/04-consume-message.yaml
+++ b/src/go/k8s/tests/e2e/pandaproxy-produce-consume/04-consume-message.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
         - name: rpk
-          image: vectorized/redpanda:latest
+          image: ivotron/redpanda:slimmer
           env:
             - name: POD_NAMESPACE
               valueFrom:
@@ -18,7 +18,7 @@ spec:
             - -c
             - -ex
           args:
-            - | 
+            - |
               curl -s -v http://cluster-proxy-0.cluster-proxy.$POD_NAMESPACE.svc.cluster.local:8082/topics/test/partitions/0/records?offset=0\&timeout=1000\&max_bytes=100000 \
               -H "Accept: application/vnd.kafka.json.v2+json"
       restartPolicy: Never
