--- a/src/go/k8s/tests/e2e/produce-tls/00-redpanda-cluster.yaml
+++ b/src/go/k8s/tests/e2e/produce-tls/00-redpanda-cluster.yaml
@@ -3,8 +3,8 @@ kind: Cluster
 metadata:
   name: thisisverylongnamethatishittingthemax40c
 spec:
-  image: "vectorized/redpanda"
-  version: "latest"
+  image: "ivotron/redpanda"
+  version: "slimmer"
   replicas: 1
   resources:
     requests:
