--- a/src/go/k8s/tests/e2e/produce-tls/03-produce-message.yaml
+++ b/src/go/k8s/tests/e2e/produce-tls/03-produce-message.yaml
@@ -18,7 +18,7 @@ spec:
             name: rpk-config
       containers:
         - name: rpk
-          image: vectorized/redpanda:latest
+          image: ivotron/redpanda:slimmer
           env:
             - name: POD_NAMESPACE
               valueFrom:
