--- a/src/go/k8s/tests/e2e/update-conf-image/01-current-image.yaml
+++ b/src/go/k8s/tests/e2e/update-conf-image/01-current-image.yaml
@@ -3,8 +3,8 @@ kind: Cluster
 metadata:
   name: update-image-cluster
 spec:
-  image: "vectorized/redpanda"
-  version: "latest"
+  image: "ivotron/redpanda"
+  version: "slimmer"
   replicas: 2
   resources:
     requests:
