--- a/src/go/k8s/tests/e2e/update-image-and-node-port/01-new-image.yaml
+++ b/src/go/k8s/tests/e2e/update-image-and-node-port/01-new-image.yaml
@@ -3,4 +3,5 @@ kind: Cluster
 metadata:
   name: update-image-cluster-and-node-port
 spec:
-  version: "latest"
+  image: "ivotron/redpanda"
+  version: "slimmer"
